--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 
 		<div class="img">
-			<img src="img/bg1.svg">
+			//<img src="img/bg1.svg">
 		</div>
 		
     <div class="login-content">
